Modified these files

--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Discover the world with our unforgettable tours.
-        Explore exotic destinations, taste local cuisine, and immerse yourself in diverse cultures. Book now and experience Tour & Guide
-          personalized service and expert guides. Let us create your dream vacation today"
-    />
-    <link rel="shortcut icon" href="assets/icons8-around-the-globe-96.png" />
 
-    <title>Group B Project</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description"
+    content="Discover the world with our unforgettable tours. Explore exotic destinations, taste local cuisine, and immerse yourself in diverse cultures. Book now and experience Tour &amp; Guide personalized service and expert guides. Let us create your dream vacation today" />
+  <link rel="shortcut icon" href="assets/icons8-around-the-globe-96.png" />
 
-  <body>
-    <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div id="root"></div>
-    
-  </body>
+  <title>Group B Project</title>
+  <link rel="manifest" href="./manifest.json" />
+  <link href="/static/css/main.43b1820a.css" rel="stylesheet" />
+</head>
+
+<body>
+  <noscript> You need to enable JavaScript to run this app. </noscript>
+  <div id="root"></div>
+
+  <script defer src="/static/js/main.dd3c0563.js"></script>
+</body>
+
 </html>
